--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^1.3.0",
     "@discordjs/voice": "^0.13.0",
-    "discord-player": "^5.3.2",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0"
   },
-  "name": "testbot",
-  "version": "1.0.0",
+  "name": "kinglaugh",
+  "version": "3.0.0",
   "description": "discord bot",
   "main": "index.js",
   "scripts": {
     "test": "node index.js"
   },
-  "author": "",
+  "author": "shia",
   "license": "ISC"
 }
